# CoAPServer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  aiocoap.py  cli.py  cli_aiocoap.py  client.py  pyproject.toml
coap_server/: __main__.py  logger.py  request_handler.py  server.py
coap_server/resources/: base_resource.py  devices.py  sensors.py  temperature_sensor.py
coap_server/utils/: constants.py  construct_response.py  exceptions.py  parser.py
docs/: about.md  dokumentacja_koncowa.md
tests/: conftest.py  test_get.py  test_put.py
tests/integration/: test_delete.py  test_get.py  test_post.py  test_put.py  test_server.py
tests/unit/: test_delete.py  test_error_handling.py  test_get.py  test_message.py  test_parser.py  test_post.py  test_put.py  test_sanity.py
