[tool.poetry]
name = "coap-server"
version = "0.1.0"
description = "Celem projektu jest implementacja serwera CoAP, który będzie obsługiwał przynajmniej żądania GET, POST, PUT, oraz DELETE. Serwer powinien posiadać odpowiednio skonstruowaną architekturę - tak, aby łatwo było dodać nową funkcję obsługującą żądania przychodzące na dany URL."
authors = ["Bruno Sienkiewicz", "Maksymilian Nowak", "Michał Machnikowski"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.13.0"
pytest = "^8.3.4"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
typer = "^0.15.1"
flake8 = "^7.1.1"
coverage = "^7.6.10"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
coap-server = "coap_server.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
